Fixed bg image cropping, added scrollbar styling.

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -32,13 +32,12 @@ body {
 
 @layer components {
   .layout-body {
-    @apply min-h-full flex flex-col font-mono text-foreground;
+    @apply min-h-screen flex flex-col font-mono text-foreground;
   }
 
   .layout-main {
-    @apply flex-1;
+    @apply flex-1 flex flex-col;
   }
-
   /* ─── Navbar ──────────────────────────────────────── */
 
   .nav-root {
@@ -287,4 +286,17 @@ body {
   .contact-socials {
     @apply flex flex-col gap-1;
   }
+}
+
+html::-webkit-scrollbar {
+  width: 16px;
+}
+
+html::-webkit-scrollbar-thumb {
+  background-color: var(--background);
+  border: 1px solid var(--foreground);
+}
+
+html::-webkit-scrollbar-track {
+  background-color: var(--foreground);
 }
